Wrapped body content in div and used the div in css instead of body. Also merged in main and resolved conflicts. Everything is in the frontend map

--- a/frontend/css/login.css
+++ b/frontend/css/login.css
@@ -1,4 +1,4 @@
-body{
+div{
     justify-content: center;
 }
 
@@ -11,7 +11,6 @@ body{
 .buttons{
     margin-top: 10px;
     display: flex;
-    align-items:;
     flex-direction: column;
     row-gap: 10px;
 }
